Update project configuration for Scala 2.13.x and Spark 3.5.x.
- Modify .gitignore to include additional directories
- Enhance README with detailed project description, requirements, and usage instructions
- Update build.sbt for Scala and Spark versions, and adjust library dependencies
- Upgrade sbt version in build.properties
- Refactor Extensions.scala for improved future handling
- Revise FileSystemStopStreamingQueryTest for better resource management and test clarity
- Add .jvmopts for JVM options