@@ -2,18 +2,36 @@ name := "StopStreamingGracefully"
 
 version := "0.1"
 
-scalaVersion := "2.12.10"
-val sparkVersion = "2.4.5"
+scalaVersion := "2.13.14"
 
-resolvers += "bintray-spark-packages" at "https://dl.bintray.com/spark-packages/maven/"
+val sparkVersion = "3.5.3"
 
 libraryDependencies ++= Seq(
-  "org.apache.spark"     %% "spark-core" % sparkVersion,
-  "org.apache.spark"     %% "spark-sql"  % sparkVersion,
-  "org.apache.spark"     %% "spark-hive" % sparkVersion,
-  "org.scalatest" %% "scalatest" % "3.1.1" % "test",
-  "org.scalactic" %% "scalactic" % "3.1.1",
-  "com.databricks" % "dbutils-api_2.11" % "0.0.4"
+  "org.apache.spark" %% "spark-core" % sparkVersion,
+  "org.apache.spark" %% "spark-sql"  % sparkVersion,
+  "org.apache.spark" %% "spark-hive" % sparkVersion,
+  "org.scalatest"    %% "scalatest"  % "3.2.19" % Test,
+  "org.scalactic"    %% "scalactic"  % "3.2.19",
+  "com.databricks"   %  "dbutils-api_2.12" % "0.0.5" % Provided excludeAll(
+    ExclusionRule(organization = "org.apache.spark")
+  )
 )
 
-logBuffered in Test := false
+Test / logBuffered := false
+Test / fork        := true
+Test / javaOptions ++= Seq(
+  "--add-opens=java.base/java.lang=ALL-UNNAMED",
+  "--add-opens=java.base/java.lang.invoke=ALL-UNNAMED",
+  "--add-opens=java.base/java.lang.reflect=ALL-UNNAMED",
+  "--add-opens=java.base/java.io=ALL-UNNAMED",
+  "--add-opens=java.base/java.net=ALL-UNNAMED",
+  "--add-opens=java.base/java.nio=ALL-UNNAMED",
+  "--add-opens=java.base/java.util=ALL-UNNAMED",
+  "--add-opens=java.base/java.util.concurrent=ALL-UNNAMED",
+  "--add-opens=java.base/java.util.concurrent.atomic=ALL-UNNAMED",
+  "--add-opens=java.base/sun.nio.ch=ALL-UNNAMED",
+  "--add-opens=java.base/sun.nio.cs=ALL-UNNAMED",
+  "--add-opens=java.base/sun.security.action=ALL-UNNAMED",
+  "--add-opens=java.base/sun.util.calendar=ALL-UNNAMED",
+  "--add-opens=java.security.jgss/sun.security.krb5=ALL-UNNAMED"
+)
